# Defakepy

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  test_imports.py
.github/ISSUE_TEMPLATE/: bug_report.yml
examples/: basic_usage.py
src/defakepy/: __init__.py  audio_engine.py  cli.py  image_engine.py  text_engine.py  vision_engine.py
tests/: test_core.py
