[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "defakepy"
version = "0.1.1"
description = "A powerful open source library for detecting deepfakes and AI-generated content."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Frontier Technologies Research Alliance", email = "ftralliance@gmail.com" }
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "librosa>=0.10.0",
    "opencv-python>=4.8.0",
    "dlib>=19.24.0",
    "c2pa-python>=0.28.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0"
]

[project.scripts]
defakepy-scan = "defakepy.cli:main"
